First complete layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
     <a href="/">WikiTrans</a>
     <a class="extra" href="http://github.com/wikitrans/wikitrans">Code</a>
     <a class="extra" href="http://github.com/j2labs/goopytrans">Goopytrans</a>
-    <a class="extra" href="http://github.com/j2labs/wikipydia">Wikipydiait's a </a>
+    <a class="extra" href="http://github.com/j2labs/wikipydia">Wikipydia</a>
   </div>
   
   {{ content }}
@@ -31,7 +31,8 @@
   <div class="footer">
     <div class="contact">
       <p>
-        <a href="mailto:ccb@cs.jhu.edu">Chris Callison-Burch</a> or <a href="mailto:jd@j2labs.net">James Dennis</a><br />
+        <a href="mailto:ccb@cs.jhu.edu">Chris Callison-Burch</a><br />
+        <a href="mailto:jd@j2labs.net">James Dennis</a><br />
       </p>
     </div>
     <div class="contact">
