Moved finished design from j2labs.github.com here

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
    <meta name="author" content="WikiTrans" />
-   <!--<link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="Tom Preston-Werner" type="application/atom+xml" />-->
+   <link href="/atom.xml" rel="alternate" title="WikiTrans Blog" type="application/atom+xml" />
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
@@ -13,15 +13,15 @@
    <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
 
    <!-- Typekit -->
-   <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
-   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+   <!--<script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
+   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>-->
 </head>
 <body>
 
 <div class="site">
   <div class="title">
     <a href="/">WikiTrans</a>
-    <a class="extra" href="http://github.com/wikitrans/wikitrans">Code</a>
+    <a class="extra" href="http://github.com/j2labs/wikitrans">Code</a>
     <a class="extra" href="http://github.com/j2labs/goopytrans">Goopytrans</a>
     <a class="extra" href="http://github.com/j2labs/wikipydia">Wikipydia</a>
   </div>
@@ -41,15 +41,10 @@
         <a href="http://github.com/j2labs/">github.com/j2labs</a><br />
       </p>
     </div>
-<!--    <div class="rss">
-      <a href="http://feeds.feedburner.com/tom-preston-werner">
-        <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
-      </a>
-    </div>-->
   </div>
 </div>
 
-<a href="http://github.com/j2labs/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
+<a href="http://github.com/wikitrans/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
 
 <!--<script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
