Added Pyango View to navigation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
   <div class="title">
     <a href="/">WikiTrans</a>
     <a class="extra" href="http://github.com/j2labs/wikitrans">Code</a>
+    <a class="extra" href="http://github.com/j2labs/pyango_view">Pyango View</a>
     <a class="extra" href="http://github.com/j2labs/goopytrans">Goopytrans</a>
     <a class="extra" href="http://github.com/j2labs/wikipydia">Wikipydia</a>
   </div>
