--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,3 +13,5 @@ layout: default
     {% endfor %}
   </ul>
 </div>
+
+<div id="disqus_thread"></div><script type="text/javascript" src="http://disqus.com/forums/wikitransblog/embed.js"></script><noscript><a href="http://disqus.com/forums/wikitransblog/?url=ref">View the discussion thread.</a></noscript><a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
