--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,13 +5,13 @@ layout: default
 {{ content }}
 </div>
 
-<div id="related">
+<!--<div id="related">
   <h2>Related Posts</h2>
   <ul class="posts">
     {% for post in site.related_posts limit:3 %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
-</div>
+</div>-->
 
 <div id="disqus_thread"></div><script type="text/javascript" src="http://disqus.com/forums/wikitransblog/embed.js"></script><noscript><a href="http://disqus.com/forums/wikitransblog/?url=ref">View the discussion thread.</a></noscript><a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
